# SignetProtocolMVP

./: .gitignore  CODEOWNERS  Dockerfile  Dockerfile.devcontainer  LICENSE  Makefile  README.md  SECURITY.md  WORKDONE.md  branch-protection.md  ci-hardening.md  codecov.yml  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  ci.yml.bak  codeql.yml  fuzzing-cron.yml  fuzzing-pr.yml  mutation.yml  pip-audit.yml  publish.yml  release.yml  sbom.yml  scorecard.yml  typecheck.yml
.tmp_pack/: README.md  verify.ps1  verify.sh
copilot/: Master.md  PLAN.md
copilot/prompts/: 00_guardrails.md  01_bootstrap_env.md  02_fill_gaps_api.md  03_write_tests.md  04_debug.md  05_run.md  06_git.md  07_ci.md  08_worklog.md
docs/: API.md  DEMO_SCRIPT.md  DEMO_SCRIPT.sh  DESIGN.md  EXAMPLES.md  ONEPAGER.md  SR-1.md
fuzz/: fuzz_merkle.py  fuzz_receipt.py  fuzz_verify_inclusion.py  fuzz_verify_receipt.py
scripts/: emit_sig_headers.py  log_workdone.py  make_sales_bundle.ps1  pin_actions.py  verify-receipt-node.mjs
src/examples/: postman_collection.json
src/signet_api/: crypto.py  logutil.py  main.py  merkle.py  models.py  pipeline.py  provenance.py  receipts.py  settings.py
src/signet_cli/: __main__.py
src/signet_sdk/: __init__.py  (+1 more)
tests/: _helpers.py  conftest.py  crypto_compat.py  test_api.py  test_crosslang.py  test_merkle.py  test_policy.py  test_provenance.py  test_receipts.py  test_security.py
(+37 files in other folders)
