[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signet-sdk"
version = "0.0.1"
description = "Signet Protocol Python SDK (receipt & STH verification)"
authors = [{name = "Signet"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["signet", "receipts", "merkle", "ed25519", "provenance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "rfc8785==0.1.4",
  "PyNaCl==1.5.0"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/Maverick0351a/SignetProtocolMVP"

[tool.setuptools.packages.find]
where = ["src"]
include = ["signet_sdk*"]
